# ubuntu-rockchip-settings

./: 51-alsa-custom.lua  README.md  meson.build
.github/workflows/: build.yaml
data/: meson.build
data/common/: 90-naming-audios.rules  adduser.conf  gpu-governor.service  rockchip-gzip.conf  u-boot-menu.conf  ubuntu-rockchip-install  usb_modeswitch
data/desktop/: 00-favorite-apps  01-use-network-manager.yaml  10-globally-managed-devices.conf  10-override-wifi-random-mac-disable.conf  mimeapps.list  swapfile.swap
data/server/: 99-fake-cloud.cfg  getty-wait.conf  override.conf
debian/: .gitignore  changelog  control  copyright  rules  ubuntu-rockchip-settings-desktop.gsettings-override  ubuntu-rockchip-settings-desktop.install  ubuntu-rockchip-settings-desktop.lintian-overrides  ubuntu-rockchip-settings-desktop.postinst  ubuntu-rockchip-settings-server.install  ubuntu-rockchip-settings-server.postinst  ubuntu-rockchip-settings.install  ubuntu-rockchip-settings.lintian-overrides  ubuntu-rockchip-settings.postinst
